Now, if the path to a script file in a <script> tag is relative, it will be looked for in the same place where the game.xml file is located

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,7 @@ target_include_directories(trogdor
 )
 
 target_link_libraries(trogdor
+	PUBLIC stdc++fs
 	PUBLIC xml2
 	PUBLIC pthread
 	PUBLIC lua$ENV{LUA_VERSION}
