trogdord: added config options for asio options keep_alive and reuse_address

--- a/src/trogdord/etc/trogdord.ini
+++ b/src/trogdord/etc/trogdord.ini
@@ -3,6 +3,18 @@
 ; By default, trogdord runs on port 1040.
 ; port=1040
 
+; Socket option to allow the socket to be bound to an address that's already in
+; use. If you don't enable this, you might have to wait a couple of minutes
+; after stopping trogdord before you can start it again. On the flip side, not
+; enabling it might in some circumstances be safer. For an explanation of what
+; this is doing, see:
+; https://stackoverflow.com/questions/3229860/what-is-the-meaning-of-so-reuseaddr-setsockopt-option-linux
+; reuse_address=true
+
+; Send TCP keep-alives (unless you know what you're doing, you'll want this
+; option to remain on.)
+; send_keepalive=true
+
 [resources]
 
 ; This is the default path where game definition files are stored. Relative
