trogdord: added definitions for installation prefix and current version, and added the current version to the group of statistics returned by a call to get:global:statistics

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -177,7 +177,10 @@ if (Boost_FOUND)
 
 	add_dependencies(trogdord trogdor trogdord_data)
 
-	# Default location where standalone looks for game.xml
+	# Explose the installation prefix to trogdord
+	add_definitions(-DTROGDORD_INSTALL_PREFIX=\"${CMAKE_INSTALL_PREFIX}\")
+
+	# Default location where trogdord looks for trogdord.ini
 	add_definitions(-DTROGDORD_INI_PATH=\"${CMAKE_INSTALL_PREFIX}/etc/trogdord/trogdord.ini\")
 
 	install(TARGETS trogdord DESTINATION bin COMPONENT trogdord OPTIONAL)
