--- a/src/trogdord/etc/trogdord.ini
+++ b/src/trogdord/etc/trogdord.ini
@@ -15,6 +15,16 @@
 ; option to remain on.)
 ; send_keepalive=true
 
+[logging]
+
+; Trogdord support 3 different logging methods: stdout (standard out), stderr
+; (standard error), and file (in which case you will set the logto option to
+; the filename where you'd like your logs to be appended.) By default, logto is
+; set to stderr.
+; logto=stderr
+; logto=stdout
+; logto=var/log/trogdord.log
+
 [resources]
 
 ; This is the default path where game definition files are stored. Relative
