--- a/src/trogdord/etc/trogdord.ini
+++ b/src/trogdord/etc/trogdord.ini
@@ -21,9 +21,19 @@
 ; (standard error), and file (in which case you will set the logto option to
 ; the filename where you'd like your logs to be appended.) By default, logto is
 ; set to stderr.
-; logto=stderr
-; logto=stdout
-; logto=var/log/trogdord.log
+; logto="stderr"
+; logto="stdout"
+; logto="var/log/trogdord.log"
+
+[output]
+
+; This setting controls how messages in the output buffer are stored and
+; retrieved. By default, the selected driver is set to "local", which manages
+; messages locally inside trogdord. The other available driver is "redis", which
+; stores the output buffer messages in a redis cache (if you're sending output
+; messages to a websocket, this makes for quick and easy integration with
+; servers like Socket.IO.)
+; driver="local"
 
 [resources]
 
