trogdord: finished implementing input buffer and fixed some bugs. Have one oustanding issue where server crashes if you CTRL-C while running the InputListener with one or more active players

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -167,6 +167,9 @@ if (Boost_FOUND)
 		src/trogdord/scopes/global.cpp
 		src/trogdord/scopes/game.cpp
 		src/trogdord/scopes/player.cpp
+		src/trogdord/io/input/driver.cpp
+		src/trogdord/io/input/local.cpp
+		src/trogdord/io/input/redis.cpp
 		src/trogdord/io/output/driver.cpp
 		src/trogdord/io/output/local.cpp
 		src/trogdord/io/output/redis.cpp
