--- a/src/trogdord/etc/trogdord.ini
+++ b/src/trogdord/etc/trogdord.ini
@@ -25,6 +25,15 @@
 ; logto="stdout"
 ; logto="var/log/trogdord.log"
 
+[input]
+
+; This setting controls how the input buffer is managed. By default, the
+; selected driver is set to "local", which manages input locally inside
+; trogdord. The other available driver is "redis", which stores and retrieves
+; input via a redis cache (if you're retrieving input from a websocket, this
+; makes for quick and easy integration with servers like Socket.IO.)
+; driver="local"
+
 [output]
 
 ; This setting controls how messages in the output buffer are stored and
