modified documentory comments in default trogdord.ini

--- a/src/trogdord/etc/trogdord.ini
+++ b/src/trogdord/etc/trogdord.ini
@@ -29,9 +29,10 @@
 
 ; This setting controls how the input buffer is managed. By default, the
 ; selected driver is set to "local", which manages input locally inside
-; trogdord. The other available driver is "redis", which stores and retrieves
-; input via a redis cache (if you're retrieving input from a websocket, this
-; makes for quick and easy integration with servers like Socket.IO.)
+; trogdord. The other available driver (if enabled at compile time) is
+; "redis", which sends and receives input via a redis channel (if you're
+; retrieving input from a websocket, this makes for quick and easy
+; integration with servers like Socket.IO.)
 ; driver="local"
 
 [output]
@@ -39,9 +40,9 @@
 ; This setting controls how messages in the output buffer are stored and
 ; retrieved. By default, the selected driver is set to "local", which manages
 ; messages locally inside trogdord. The other available driver is "redis", which
-; stores the output buffer messages in a redis cache (if you're sending output
-; messages to a websocket, this makes for quick and easy integration with
-; servers like Socket.IO.)
+; sends output messages to a redis channel (if you're sending output messages
+; to a websocket, this makes for quick and easy integration with servers like
+; Socket.IO.)
 ; driver="local"
 
 [resources]
