trogdord: implemented redis output driver and fixed bugs in default trogdord.ini format

--- a/src/trogdord/etc/trogdord.ini
+++ b/src/trogdord/etc/trogdord.ini
@@ -21,9 +21,9 @@
 ; (standard error), and file (in which case you will set the logto option to
 ; the filename where you'd like your logs to be appended.) By default, logto is
 ; set to stderr.
-; logto="stderr"
-; logto="stdout"
-; logto="var/log/trogdord.log"
+; logto=stderr
+; logto=stdout
+; logto=var/log/trogdord.log
 
 [input]
 
@@ -33,7 +33,7 @@
 ; "redis", which sends and receives input via a redis channel (if you're
 ; retrieving input from a websocket, this makes for quick and easy
 ; integration with servers like Socket.IO.)
-; driver="local"
+; driver=local
 
 [output]
 
@@ -43,10 +43,34 @@
 ; sends output messages to a redis channel (if you're sending output messages
 ; to a websocket, this makes for quick and easy integration with servers like
 ; Socket.IO.)
-; driver="local"
+; driver=local
+
+; These settings will only be used if redis support was enabled at compile-time
+; and if the redis input and/or output drivers are used.
+[redis]
+
+; The hostname where the redis instance is running. Defaults to localhost.
+; host=localhost
+
+; The port the redis instance is listening on.
+; port=6379
+
+; The number of milliseconds we should wait when attempting to connect to Redis
+; before timing out.
+; connection_timeout=5000
+
+; If a connection to redis fails, trogdord will automatically try to connect
+; again after this number of milliseconds.
+; connection_retry_interval=5000
+
+; The redis channel we should publish output messages to.
+; output_channel=trogdord:out
+
+; The redis channel we should subscribe to in order to receive input
+; input_channel=trogdord:in
 
 [resources]
 
 ; This is the default path where game definition files are stored. Relative
 ; paths are based on the root directory where trogdord was installed.
-; definitions_path="share/trogdor"
+; definitions_path=share/trogdor
