--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,7 +156,6 @@ if (Boost_FOUND)
 
 	if (ENABLE_REDIS)
 
-		add_definitions(-DENABLE_REDIS)
 		pkg_check_modules (HIREDIS REQUIRED hiredis>=0.13)
 
 		add_library(trogdord_redis STATIC
@@ -206,7 +205,7 @@ if (Boost_FOUND)
 	# Link in the redis input and output drivers
 	if (ENABLE_REDIS)
 
-		target_include_directories(trogdord
+		target_include_directories(trogdord_redis
 			PUBLIC ${HIREDIS_INCLUDE_DIRS}
 		)
 
@@ -215,6 +214,7 @@ if (Boost_FOUND)
 			PUBLIC ${HIREDIS_LIBRARIES}
 		)
 
+		add_definitions(-DENABLE_REDIS)
 		add_dependencies(trogdord trogdord_redis)
 
 	endif (ENABLE_REDIS)
