trogdord: there is now only one input driver, though I'll add support for input listeners, which can listen to outside sources like redis asynchronously and send that input back to the driver

--- a/src/trogdord/etc/trogdord.ini
+++ b/src/trogdord/etc/trogdord.ini
@@ -25,16 +25,6 @@
 ; logto=stdout
 ; logto=var/log/trogdord.log
 
-[input]
-
-; This setting controls how the input buffer is managed. By default, the
-; selected driver is set to "local", which manages input locally inside
-; trogdord. The other available driver (if enabled at compile time) is
-; "redis", which sends and receives input via a redis channel (if you're
-; retrieving input from a websocket, this makes for quick and easy
-; integration with servers like Socket.IO.)
-; driver=local
-
 [output]
 
 ; This setting controls how messages in the output buffer are stored and
@@ -46,7 +36,7 @@
 ; driver=local
 
 ; These settings will only be used if redis support was enabled at compile-time
-; and if the redis input and/or output drivers are used.
+; and if the redis output driver or input listener are used.
 [redis]
 
 ; The hostname where the redis instance is running. Defaults to localhost.
