trogdord: implemented input listeners, which listen asynchronously for input from outside sources such as redis

--- a/src/trogdord/etc/trogdord.ini
+++ b/src/trogdord/etc/trogdord.ini
@@ -25,6 +25,17 @@
 ; logto=stdout
 ; logto=var/log/trogdord.log
 
+[input]
+
+; Input listeners receive strings from external sources asynchronously and feed
+; them to the input driver. Zero or more input listeners can run at the same
+; time. If redis support is enabled at compile-time, the redis input listener
+; can be started by adding "redis" (the quotes are required) to the array of
+; listeners below. The redis input listener can be further configured in the
+; [redis] section. By default, no input listeners are configured.
+; listeners=[]
+; listeners=["redis"]
+
 [output]
 
 ; This setting controls how messages in the output buffer are stored and
