--- a/src/nodejs/trogdord/package.json
+++ b/src/nodejs/trogdord/package.json
@@ -3,7 +3,13 @@
   "version": "0.1.0",
   "description": "The official trogdord client for Node.js",
   "homepage": "https://github.com/crankycyclops/trogdor-pp",
-  "bugs": "https://github.com/crankycyclops/trogdor-pp/issues",
+  "bugs": {
+    "url": "https://github.com/crankycyclops/trogdor-pp/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/crankycyclops/trogdor-pp.git"
+  },
   "keywords": [
     "text adventure",
     "trogdor",
@@ -20,5 +26,6 @@
     "node": ">=12.0.0"
   },
   "author": "James Colannino <crankycyclops@gmail.com> (https://github.com/crankycyclops)",
-  "license": "GPL-3.0"
+  "license": "GPL-3.0",
+  "private": false
 }
