--- a/src/nodejs/trogdord/package.json
+++ b/src/nodejs/trogdord/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trogdord",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "The official trogdord client for Node.js",
   "homepage": "https://github.com/crankycyclops/trogdor-pp",
   "bugs": {
@@ -25,7 +25,7 @@
   "engines": {
     "node": ">=12.0.0"
   },
-  "author": "James Colannino <crankycyclops@gmail.com> (https://github.com/crankycyclops)",
+  "author": "James Colannino <npm@colannino.dev> (https://github.com/crankycyclops)",
   "license": "GPL-3.0",
   "private": false
 }
