core: added unit test for Messages class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -296,6 +296,7 @@ add_dependencies(analyze cppcheck)
 add_executable(test_core
 	src/core/test/main.cpp
 	src/core/test/tokenizer.cpp
+	src/core/test/messages.cpp
 )
 
 target_include_directories(test_core
