--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -297,6 +297,8 @@ add_executable(test_core
 	src/core/test/main.cpp
 	src/core/test/tokenizer.cpp
 	src/core/test/messages.cpp
+	src/core/test/vocabulary.cpp
+	src/core/test/mock/mockaction.cpp
 )
 
 target_include_directories(test_core
