core: began writing unit test for utility.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -299,6 +299,7 @@ add_executable(test_core
 	src/core/test/messages.cpp
 	src/core/test/vocabulary.cpp
 	src/core/test/command.cpp
+	src/core/test/utility.cpp
 	src/core/test/mock/mockaction.cpp
 	src/core/test/mock/stringin.cpp
 )
