core: finished writing unit tests for Timer and began implementing unit tests for EventListener (event/eventlistener.cpp)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -300,12 +300,14 @@ add_executable(test_core
 	src/core/test/vocabulary.cpp
 	src/core/test/command.cpp
 	src/core/test/utility.cpp
+	src/core/test/event/eventlistener.cpp
 	src/core/test/timer/timer.cpp
 	src/core/test/timer/timerjob.cpp
 	src/core/test/timer/jobs/autoattack.cpp
 	src/core/test/timer/jobs/respawn.cpp
 	src/core/test/timer/jobs/wander.cpp
 	src/core/test/mock/mockaction.cpp
+	src/core/test/mock/mocktrigger.cpp
 	src/core/test/mock/mocktimerjob.cpp
 	src/core/test/mock/stringin.cpp
 )
