--- a/.github/workflows/actions/test_php/Dockerfile
+++ b/.github/workflows/actions/test_php/Dockerfile
@@ -1,7 +1,15 @@
 FROM ubuntu:18.04
 
+# Add PHP repository
 RUN apt-get update && apt-get install -y software-properties-common
 RUN LC_ALL=C.UTF-8 add-apt-repository -y ppa:ondrej/php && apt-get update
+
+# Prevents the script from stalling due to requiring the user to pick a timezone
+RUN export DEBIAN_FRONTEND=noninteractive DEBCONF_NONINTERACTIVE_SEEN=true
+RUN sudo ln -fs /usr/share/zoneinfo/America/New_York /etc/localtime
+RUN sudo dpkg-reconfigure --frontend noninteractive tzdata
+
+# Install build dependencies for each supported PHP version
 RUN apt-get update && apt-get -y install git g++ php7.2-cli php7.2-dev php7.3-cli php7.3-dev php7.4-cli php7.4-dev
 
 COPY entrypoint.sh /entrypoint.sh
