--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,15 +1,15 @@
-name: Core Unit Tests
+name: PHP Unit Tests
 on: [push, pull_request]
 
 jobs:
 
-   test_core:
+   test_php:
 
       runs-on: ubuntu-latest
-      name: Core
+      name: PHP
 
       steps:
          - name: Checkout
            uses: actions/checkout@v2
          - name: Build and run
-           uses: ./.github/workflows/actions/test_core
+           uses: ./.github/workflows/actions/test_php
