--- a/.github/workflows/actions/test_trogdord/action.yml
+++ b/.github/workflows/actions/test_trogdord/action.yml
@@ -1,15 +1,15 @@
-name: PHP Tests
+name: Trogdord Tests
 on: [push, pull_request]
 
 jobs:
 
-   test_php:
+   test_trogdord:
 
       runs-on: ubuntu-latest
-      name: PHP
+      name: Trogdord
 
       steps:
          - name: Checkout
            uses: actions/checkout@v2
          - name: Build and run
-           uses: ./.github/workflows/actions/test_php
+           uses: ./.github/workflows/actions/test_trogdord
