--- a/.github/workflows/trogdord.yml
+++ b/.github/workflows/trogdord.yml
@@ -13,3 +13,8 @@ jobs:
            uses: actions/checkout@v2
          - name: Build and run
            uses: ./.github/workflows/actions/test_trogdord
+         - uses: actions/upload-artifact@v2
+           if: failure()
+           with:
+             name: coredump
+             path: core
