updated trogdord to take the new entity types (Tangible and Resource) into account

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -197,6 +197,8 @@ if (Boost_FOUND)
 		src/trogdord/scopes/global.cpp
 		src/trogdord/scopes/game.cpp
 		src/trogdord/scopes/entity.cpp
+		src/trogdord/scopes/resource.cpp
+		src/trogdord/scopes/tangible.cpp
 		src/trogdord/scopes/place.cpp
 		src/trogdord/scopes/room.cpp
 		src/trogdord/scopes/thing.cpp
