--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -55,6 +55,9 @@ jobs:
     #    uses a compiled language
 
     - run: |
+       apt-get -y install libxml2 libxml2-dev liblua5.3 liblua5.3-dev
+
+    - run: |
        cmake -DCMAKE_BUILD_TYPE=Debug .
        make
 
