--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -59,7 +59,7 @@ jobs:
 
     - run: |
        cmake -DCMAKE_BUILD_TYPE=Debug .
-       make
+       make trogdor standalone trogdord
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
